--- a/config/initializers/google.rb.example
+++ b/config/initializers/google.rb.example
@@ -1,4 +1,4 @@
 # API for google maps 2.0
 # Google Maps 3.0 does not require API key
 
-GOOGLE_KEY = "your key here"
+GOOGLE_MAPS2_KEY = "your key here"
