--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ See http://help.github.com/ignore-files/ for more about ignoring files.
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+vendor/ruby
