--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 config/initializers/password.rb
 config/initializers/google.rb
 
+database.yml
+
 *.sass-cache
 
 See http://help.github.com/ignore-files/ for more about ignoring files.
