--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -1,18 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 
-development: &common
+development:
   adapter: mysql2
-  database: prod
+  database: rideshare
   username: root
-  password: newlife
+  password: 
 
 test:
-  <<: *common
-  database: test-prod
+  adapter: mysql2
+  database: rideshare-test
+  username: root
+  password: 
+
 
 production:
-  <<: *common
+  adapter: mysql2
+  database: rideshare
+  username: root
+  password: 
