--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -1,19 +1,12 @@
-
-development:
+development: &default
   adapter: mysql2
-  database: rideshare
+  database: prod
   username: root
   password: 
 
 test:
-  adapter: mysql2
-  database: rideshare-test
-  username: root
-  password: 
-
+  <<: *default
+  database: prod_test
 
 production:
-  adapter: mysql2
-  database: rideshare
-  username: root
-  password: 
+  <<: *default
